...
                  children: [
                    Padding(
                      padding: const EdgeInsets.symmetric(
                          horizontal: 16.0, vertical: 15.0),
                      child: Container(
                        child: const Text(
                          "Bank Sampah Terdekat",
                          style: TextStyle(
                            fontSize: 20,
                            fontWeight: FontWeight.bold,
                            color: Colors.black87,
                          ),
                        ),
...
                    ),
                    Expanded(
                      child: ListView(
                        padding: const EdgeInsets.symmetric(horizontal: 16.0),
                        children: [
                          WasteBankCard(
                            name: "Bank Sampah Dewi Sinta",
                            address: "Jl. Andora, Citraland",
                            status: "Tersedia",
                            statusColor: Colors.green,
                            isSelected:
                                selectedWasteBank == "Bank Sampah Dewi Sinta",
                            onTap: () {
...
